Actions
Bug #10139
closedsmatch fixes for usr/src/cmd/stat
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Quieten smatch.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 9a25c41f5f79fbad25d7746f5a4e65423c7eddff
commit 9a25c41f5f79fbad25d7746f5a4e65423c7eddff Author: John Levon <john.levon@joyent.com> Date: 2019-01-29T22:13:11.000Z 10139 smatch fixes for usr/src/cmd/stat Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions